tests/ui/const-generics/adt_const_params/unsized-anon-const-err-2.stderr
error: free constant item without body
  --> $DIR/unsized-anon-const-err-2.rs:9:1
   |
LL | const A: [u8];
   | ^^^^^^^^^^^^^-
   |              |
   |              help: provide a definition for the constant: `= <expr>;`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-anon-const-err-2.rs:9:10
   |
LL | const A: [u8];
   |          ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: statics and constants must have a statically known size

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-anon-const-err-2.rs:13:31
   |
LL | impl<const N: i32> Copy for S<A> {}
   |                               ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: statics and constants must have a statically known size

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-anon-const-err-2.rs:16:33
   |
LL | impl<const M: usize> Copy for S<A> {}
   |                                 ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: statics and constants must have a statically known size

error[E0207]: the const parameter `N` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unsized-anon-const-err-2.rs:13:6
   |
LL | impl<const N: i32> Copy for S<A> {}
   |      ^^^^^^^^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error[E0207]: the const parameter `M` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unsized-anon-const-err-2.rs:16:6
   |
LL | impl<const M: usize> Copy for S<A> {}
   |      ^^^^^^^^^^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0207, E0277.
For more information about an error, try `rustc --explain E0207`.
